Pr/update spring version (#27)
* Full rework of the extended search.
Improve Coverage required.

* Update code coverage

* Update to Spring Data Elasticsearch 5.0 + Spring 6.0

* Add sonar Analysis

* Fix sonar analysis

Co-authored-by: Francois HERBRETEAU <francois.herbreteau@rte-france.com>